Attempting to fix slider alignment and display, this is a safe commit

--- a/public/ng/app/scss/partials/_survey.scss
+++ b/public/ng/app/scss/partials/_survey.scss
@@ -1,5 +1,5 @@
 .survey {
-  padding-top: 115px !important;
+  padding-top: 100px;
   // TODO: fix linear gradient background image
   background: url('/images/survey/wood-bg.jpg'), -webkit-gradient(linear, left top, left bottom, color-stop(0%, $survey-gradient-start), color-stop(100%, $survey-gradient-end));
   // background: url('/images/survey/wood-bg.jpg'), -webkit-linear-gradient(top,  $survey-gradient-start 0%, $survey-gradient-end 100%); /* Chrome10+,Safari5.1+ */
@@ -16,23 +16,21 @@
       }
 
       .content-actual {
+        position:      relative;
         height:        100px;
         border-top:    5px solid red;
-        border-bottom: 1px solid gray;
+        border-bottom: 1px solid lightgray;
         text-align:    center;
         padding:       15px;
         display:       block;
-        position:      relative;
 
-        &:after {
-          position:   absolute;
-          height:     100px;
+        &::before {
           content:    '';
-          top:        0;
-          left:       0;
-          background: url('/images/survey/content-bg.jpg');
-          opacity:    0.25;
-          z-index:    -1;
+          position:   absolute;
+          top:        0; left: 0; bottom: 0; right: 0;
+          background: url('/images/content-bg.jpg');
+          opacity:    0.2;
+          width:      100%;
         }
       }
 
@@ -42,7 +40,10 @@
     }
 
     .tip {
+      margin:  30px;
+      padding: 20px;
       p {
+        padding: 20px;
         border: 1px solid red;
       }
     }
