--- a/public/ng/app/scss/partials/shared/_slider.scss
+++ b/public/ng/app/scss/partials/shared/_slider.scss
@@ -1,36 +1,49 @@
 .slider-container {
-  width:            93%;
-  margin-left:      16px;
-  position:         relative;
-  height:           150px;
-  background-color: #E7E7E7;
+  margin-left:  10px;
+  margin-right: 10px;
+  border:       1px dotted red;
 
-  .wedge {
-    position:     absolute;
-    z-index:      10;
-    margin:       0 auto;
-    width:        0;
-    height:       0;
-    border-style: solid;
-    border-width: 0 0 150px 600px;
-    border-color: transparent transparent transparent white;
-  }
+  .wedge-container {
+    border: 1px dotted blue;
+    width:            93%;
+    margin-left:      16px;
+    position:         relative;
+    height:           150px;
+    background-color: #E7E7E7;
 
-  .overlay {
-    position: absolute;
-    margin:   0 auto;
-    z-index:  0;
-    top:      0;
-    left:     0;
-    width:    50%;
-    height:   100%;
-
-    &.red {
-      background-image: $redGradient;
+    .wedge {
+      position:     absolute;
+      z-index:      10;
+      margin:       0 auto;
+      width:        0;
+      height:       0;
+      border-style: solid;
+      border-width: 0 0 150px 600px;
+      border-color: transparent transparent transparent white;
     }
 
-    &.green {
-      background-image: $greenGradient;
+    .overlay {
+      position: absolute;
+      margin:   0 auto;
+      z-index:  0;
+      top:      0;
+      left:     0;
+      width:    50%;
+      height:   100%;
+
+      &.red {
+        background-image: $redGradient;
+      }
+
+      &.green {
+        background-image: $greenGradient;
+      }
     }
   }
+
+  .range-container {
+    border: 1px dotted green;
+
+  }
+
 }
